--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
             <div class="status-bar__column">
                 <span>80%</span>
-                <i class="fa-solid fa-battery-full"></i>
+                <i class="fa-solid fa-battery-full fa-lg"></i>
                 <i class="fa-solid fa-bolt-lightning"></i>
             </div>
 
@@ -33,9 +33,9 @@
             </p>
         </header>
 
-        <form id="login-form">
-            <input type="text" placeholder="Email or phone number"/>
-            <input type="password" placeholder="Password"/>
+        <form action="friends.html" method="get" id="login-form">
+            <input name="username" type="text" placeholder="Email or phone number"/>
+            <input name="password" type="password" placeholder="Password"/>
             <input type="submit" value="Log In"/>
             <a href="#" >Find Kakao Account or Password</a>
         </form>
