--- a/friends.html
+++ b/friends.html
@@ -78,8 +78,10 @@
                 </div>
 
                 <div class="user-component__colunm">
-                    <span>2</span>
-                    <i class="fa-solid fa-chevron-right fa-xs"></i>
+                    <div>
+                        <span>2</span>
+                        <i class="fa-solid fa-chevron-right fa-xs"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -89,21 +91,17 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-lg"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#">
-                <span class="nav__notification">1</span>
+            <li class="nav__btn"><a class="nav__link" href="chats.html">
+                <span class="nav__notification badge">1</span>
                <i class="fa-regular fa-comment fa-lg"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-lg"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#">
+            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-lg"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="more.html">
                 <span class="nav__dot"></span>
                 <i class="fa-solid fa-ellipsis fa-lg"></i></a></li>
         </ul>
     </nav>
 
-
-   
-    
     <script src="https://kit.fontawesome.com/6621720c97.js" crossorigin="anonymous"></script>
-
 
 </body>
 
