--- a/find.html
+++ b/find.html
@@ -39,24 +39,24 @@
 
     
     <main class="main-screen">
-        <div class="find-icons">
+        <div class="icon-row">
 
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-qrcode"></i>
                 <span>QR code</span>
             </div>
 
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-regular fa-address-book"></i>
                 <span>Add by <br>Contacts</span>
             </div>
 
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-fingerprint"></i>
                 <span>Add by ID</span>
             </div>
 
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-regular fa-envelope"></i>
                 <span>Invite</span>
             </div>
