--- a/more.html
+++ b/more.html
@@ -33,7 +33,7 @@
         <div class="screen-header__icons">
             <span><i class="fa-solid fa-magnifying-glass"></i></span>
             <span><i class="fa-solid fa-music"></i></span>
-            <span><i class="fa-solid fa-gear"></i></span>
+            <span><a href="settings.html"><i class="fa-solid fa-gear"></i></a></span>
             <div class="nav__dot screen-header__dot"></div>
         </div>
     </header>
