--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,6 @@
     </header>
 
     <main class="main-screen">
-
         <div class="user-component">
             <div class="user-component__colunm">
                 <img src="https://phinf.pstatic.net/contact/20211027_98/1635341323401tc5OB_JPEG/%C7%C1%BB%E7.jpg?type=s160"
@@ -51,11 +50,30 @@
                 </div>
             </div>
             <div class="user-component__colunm">
-                <span class="user-component__time">21:22</span>
+                <span class="user-component__time">17:22</span>
                 <div class="badge">1</div>
 
             </div>
         </div>
+
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__colunm">
+                    <img src="https://thumb.mt.co.kr/06/2015/09/2015092220221498877_1.jpg/dims/optimize/"
+                        class="user-component__avatar" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">kangoll</h4>
+                        <h6 class="user-component__subtitle">Come into the LOL game</h6>
+            
+                    </div>
+                </div>
+                <div class="user-component__colunm">
+                    <span class="user-component__time">22:22</span>
+                    <div class="badge">3</div>
+            
+                </div>
+            </div>
+        </a>
 
     </main>
 
@@ -76,6 +94,9 @@
                     <i class="fa-solid fa-ellipsis fa-lg"></i></a></li>
         </ul>
     </nav>
+    <div class="no-mobile">
+        <span> Your screen is too big.. ㅠㅠ</span>
+    </div>
 
 
 
