--- a/more.html
+++ b/more.html
@@ -79,13 +79,21 @@
             
         </div>
 
-        <div class="icon-row" style="justify-content: left;">
+        <div class="icon-row">
             <div class="icon-row__icon">
                 <i class="fa-solid fa-dollar-sign"></i>
                 <span>Account</span>
             </div>
             
-            <div class="icon-row__icon" style="margin-left: 22px;">
+            <div class="icon-row__icon">
+                <i class="fa-regular fa-comments"></i>
+                <span>Openchat</span>
+            </div>
+            <div class="icon-row__icon" style="opacity: 0;">
+                <i class="fa-regular fa-comments"></i>
+                <span>Openchat</span>
+            </div>
+            <div class="icon-row__icon" style="opacity: 0;">
                 <i class="fa-regular fa-comments"></i>
                 <span>Openchat</span>
             </div>
@@ -130,6 +138,11 @@
                     <i class="fa-solid fa-ellipsis fa-lg"></i></a></li>
         </ul>
     </nav>
+
+    <div class="no-mobile">
+        <span> Your screen is too big.. ㅠㅠ</span>
+    </div>
+
 
 
     <script src="https://kit.fontawesome.com/6621720c97.js" crossorigin="anonymous"></script>
