--- a/find.html
+++ b/find.html
@@ -144,7 +144,11 @@
                     <i class="fa-solid fa-ellipsis fa-lg"></i></a></li>
         </ul>
     </nav>
+    <div class="no-mobile">
+        <span> Your screen is too big.. ㅠㅠ</span>
+    </div>
 
+    
 
     <script src="https://kit.fontawesome.com/6621720c97.js" crossorigin="anonymous"></script>
 
