--- a/friends.html
+++ b/friends.html
@@ -101,6 +101,14 @@
         </ul>
     </nav>
 
+    <div id="splash-screen">
+        <i class="fa-solid fa-comment "></i>
+    </div>
+
+    <div class="no-mobile">
+        <span> Your screen is too big.. ㅠㅠ</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/6621720c97.js" crossorigin="anonymous"></script>
 
 </body>
