--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <input type="submit" value="Log In"/>
             <a href="#" >Find Kakao Account or Password</a>
         </form>
+        <div class="no-mobile">
+            <span> Your screen is too big.. ㅠㅠ</span>
+        </div>
 
 
         <script src="https://kit.fontawesome.com/6621720c97.js" crossorigin="anonymous"></script>
