--- a/more.html
+++ b/more.html
@@ -140,7 +140,7 @@
     </nav>
 
     <div class="no-mobile">
-        <span> Your screen is too big.. ㅠㅠ..</span>
+        <span> Your screen is too big..</span>
     </div>
 
 
